Update OxyPlot to prevent getting too far out of date.

--- a/src/Applications/MultiAlign/Windows/Plots/LargeFeatureView.xaml
+++ b/src/Applications/MultiAlign/Windows/Plots/LargeFeatureView.xaml
@@ -10,7 +10,7 @@
         MinHeight="{Binding Path=Height}"
         MinWidth="{Binding Path=Width}">
     <Grid>
-        <wpf:Plot Model="{Binding Path=FeaturesPlot.Model}"
+        <wpf:PlotView Model="{Binding Path=FeaturesPlot.Model}"
                   Grid.Row="0"
                   Margin="5" />
 
