--- a/src/Applications/MultiAlign/Windows/Viewers/Spectra/SpectraView.xaml
+++ b/src/Applications/MultiAlign/Windows/Viewers/Spectra/SpectraView.xaml
@@ -45,7 +45,7 @@
                             Background="Gray"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"/>
-            <oxy:Plot
+            <oxy:PlotView
                 Margin="5"
                 Model="{Binding SelectedSpectrumPlotModel.Model}"
                 />
