--- a/src/Applications/MultiAlign/Windows/Viewers/GlobalStatistics.xaml
+++ b/src/Applications/MultiAlign/Windows/Viewers/GlobalStatistics.xaml
@@ -26,17 +26,15 @@
                             <ColumnDefinition Width="50*"/>
                         </Grid.ColumnDefinitions>
 
-                        <wpf:Plot 
+                        <wpf:PlotView 
                             Grid.Column="0"
                             Grid.Row="0"
-                            Title="All Cluster Charge States"
                             Margin="5"
                             Model="{Binding AllChargeHistogramModel.Model}"/>
                         
-                        <wpf:Plot 
+                        <wpf:PlotView 
                             Grid.Column="1"
                             Grid.Row="0"
-                            Title="Filtered Cluster Charge States"
                             Margin="5"
                             Model="{Binding FilteredChargeHistogramModel.Model}"/>
 
