--- a/src/MultiAlignRogue/Utils/PlotSaving.xaml
+++ b/src/MultiAlignRogue/Utils/PlotSaving.xaml
@@ -3,6 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="Plot Saving Settings" Height="250" Width="500">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </Window.Resources>
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -61,7 +64,7 @@
 
                 <!-- QuadTree control -->
                 <CheckBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="7,0,0,0"
-                      IsChecked="{Binding ShowAllData, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding ShowAllVisibility}">
+                      IsChecked="{Binding ShowAllData, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding ShowAllVisibility, Converter={StaticResource BoolToVis}}">
                     Show all data points
                 </CheckBox>
             </Grid>
