--- a/src/MultiAlignRogue/Clustering/ClusterViewerSettingsWindow.xaml
+++ b/src/MultiAlignRogue/Clustering/ClusterViewerSettingsWindow.xaml
@@ -2,7 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="Cluster Viewer Settings" Height="300" Width="300">
+        Title="Cluster Viewer Settings"
+        Width="300"
+        Height="300">
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -12,7 +14,7 @@
 
         <GroupBox>
             <GroupBox.Header>
-                <CheckBox IsChecked="{Binding ShouldReducePoints, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontWeight="Bold">Reduce Cluster Points</CheckBox>
+                <CheckBox FontWeight="Bold" IsChecked="{Binding ShouldReducePoints, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Reduce Cluster Points</CheckBox>
             </GroupBox.Header>
             <Grid Margin="3" IsEnabled="{Binding ShouldReducePoints}">
                 <Grid.RowDefinitions>
@@ -25,29 +27,65 @@
                     <ColumnDefinition Width="66*" />
                     <ColumnDefinition Width="33*" />
                 </Grid.ColumnDefinitions>
-                
-                <!-- NET axis divisions -->
-                <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">NET axis divisions</TextBlock>
-                <xctk:IntegerUpDown Grid.Row="0" Grid.Column="1" Minimum="0" Value="{Binding NetDivisions}" Height="25" />
-                
-                <!-- Mass axis divisions -->
-                <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Mass axis divisions</TextBlock>
-                <xctk:IntegerUpDown Grid.Row="1" Grid.Column="1" Minimum="0" Value="{Binding MassDivisions}" Height="25" />
 
-                <!-- Points Per Division -->
-                <TextBlock Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Points per division</TextBlock>
-                <xctk:IntegerUpDown Grid.Row="2" Grid.Column="1" Minimum="0" Value="{Binding PointsPerDivision}" Height="25" />
-                
-                <!-- Show division lines -->
-                <CheckBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center"
-                          IsChecked="{Binding ShowDivisionLines}">Show division lines on cluster plot</CheckBox>
+                <!--  NET axis divisions  -->
+                <TextBlock Grid.Row="0"
+                           Grid.Column="0"
+                           VerticalAlignment="Center">
+                    NET axis divisions
+                </TextBlock>
+                <xctk:IntegerUpDown Grid.Row="0"
+                                    Grid.Column="1"
+                                    Height="25"
+                                    Minimum="0"
+                                    Value="{Binding NetDivisions}" />
+
+                <!--  Mass axis divisions  -->
+                <TextBlock Grid.Row="1"
+                           Grid.Column="0"
+                           VerticalAlignment="Center">
+                    Mass axis divisions
+                </TextBlock>
+                <xctk:IntegerUpDown Grid.Row="1"
+                                    Grid.Column="1"
+                                    Height="25"
+                                    Minimum="0"
+                                    Value="{Binding MassDivisions}" />
+
+                <!--  Points Per Division  -->
+                <TextBlock Grid.Row="2"
+                           Grid.Column="0"
+                           VerticalAlignment="Center">
+                    Points per division
+                </TextBlock>
+                <xctk:IntegerUpDown Grid.Row="2"
+                                    Grid.Column="1"
+                                    Height="25"
+                                    Minimum="0"
+                                    Value="{Binding PointsPerDivision}" />
+
+                <!--  Show division lines  -->
+                <CheckBox Grid.Row="3"
+                          Grid.Column="0"
+                          Grid.ColumnSpan="2"
+                          VerticalAlignment="Center"
+                          IsChecked="{Binding ShowDivisionLines}">
+                    Show division lines on cluster plot
+                </CheckBox>
             </Grid>
         </GroupBox>
 
-        <!-- Save and Cancel buttons --> 
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <!--  Save and Cancel buttons  -->
+        <StackPanel Grid.Row="2"
+                    HorizontalAlignment="Right"
+                    Orientation="Horizontal">
             <Button Width="90" Command="{Binding CancelCommand}">Cancel</Button>
-            <Button Width="90" Margin="3,0,0,0" IsDefault="True" Command="{Binding SaveCommand}">Save</Button>
+            <Button Width="90"
+                    Margin="3,0,0,0"
+                    Command="{Binding SaveCommand}"
+                    IsDefault="True">
+                Save
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
