--- a/src/MultiAlignRogue/Clustering/UmcClusterDatasetHistogram.xaml
+++ b/src/MultiAlignRogue/Clustering/UmcClusterDatasetHistogram.xaml
@@ -2,7 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:oxy="http://oxyplot.org/wpf"
-        Title="Cluster Dataset Histogram" Height="300" Width="300">
+        Title="Cluster Dataset Histogram"
+        Width="300"
+        Height="300">
     <Grid>
         <oxy:PlotView Model="{Binding Model}" />
     </Grid>
